--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,11 @@ uuid = "c8a049cd-a7fc-4ba1-a276-6b5d4ca17ac0"
 authors = ["Jan Kuhfeld <jan.kuhfeld@rub.de> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+LibSerialPort = "a05a14c7-6e3b-5ba9-90a2-45558833e1df"
+
 [compat]
+LibSerialPort = "0.5.2"
 julia = "1.6.7"
 
 [extras]
