--- a/Project.toml
+++ b/Project.toml
@@ -8,10 +8,14 @@ LibSerialPort = "a05a14c7-6e3b-5ba9-90a2-45558833e1df"
 
 [compat]
 LibSerialPort = "0.5.2"
+SafeTestsets = "0.1.0"
+Sockets = "1.11.0"
 julia = "1.6.7"
 
 [extras]
+Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 
 [targets]
-test = ["Test"]
+test = ["Test", "SafeTestsets", "Sockets"]
